--- a/package.json
+++ b/package.json
@@ -15,13 +15,21 @@
   "author": "miguel",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "cssnano": "^5.1.13",
     "gulp": "^4.0.2",
     "gulp-avif": "^1.1.1",
     "gulp-cache": "^1.1.3",
     "gulp-imagemin": "^7.1.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^9.1.0",
     "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-webp": "^5.0.0",
+    "postcss": "^8.4.33",
     "sass": "^1.69.7"
+  },
+  "dependencies": {
+    "gulp-terser-js": "^5.2.2"
   }
 }
